--- a/index.html
+++ b/index.html
@@ -94,10 +94,13 @@
         e.preventDefault();
         const apikey = '2f5bfb7bf50c64ce137dffa6c5373b4d';
         const zip = zipInput.value;
-        getWeather(apikey, zip, (json) => {
-          tempEl.innerHTML = json.main.temp;
-          descEl.innerHTML = json.weather[0].description;
-        });
+
+        getWeather(zip, apikey)
+          .then((data) => {
+            tempEl.innerHTML = json.main.temp;
+            descEl.innerHTML = json.weather[0].description;
+          })
+          .catch((err) => console.log(err.message));
       });
     </script>
   </body>
